--- a/src/App.scss
+++ b/src/App.scss
@@ -47,7 +47,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0 15px;
     border-radius: 10px 10px 0 0;
+    border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
     background-color: rgb(0, 255, 157);
 
     p {
@@ -57,9 +59,7 @@
     }
 
     svg {
-      position: absolute;
-      right: 8px;
-      top: 8px;
+      margin-left: auto;
       fill: rgb(255, 0, 0);
       font-size: 22px;
       cursor: pointer;
@@ -73,10 +73,14 @@
     overflow-y: auto;
   }
 
+  &__no-message {
+    text-align: center;
+  }
+
   &__messages {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
   }
 
   &__send-message {
@@ -91,22 +95,34 @@
     width: 80%;
     border-radius: 10px 10px 10px 0;
     padding: 8px;
-    background-color: rgb(0, 255, 157);
+    background-color: rgb(228, 227, 227);
   }
 
   &__footer {
-    height: 50px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 0 15px;
-    border-radius: 0 0 10px 10px;
+    form {
+      height: 50px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 0 15px;
+      border-radius: 0 0 10px 10px;
+    }
 
     input {
       width: 100%;
       font-size: 14px;
       border: none;
       outline: none;
+    }
+
+    button {
+      width: 25px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: none;
+      outline: none;
+      background-color: transparent;
     }
 
     svg {
